[gd_scene load_steps=2 format=2]

[ext_resource path="res://Backend/NotificationsBackend.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Get Notifications for User" type="Button" parent="."]
margin_left = 98.0
margin_top = 89.0
margin_right = 619.0
margin_bottom = 173.0
text = "Get Notifications for User"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Quiz Notification" type="Button" parent="."]
margin_left = 103.0
margin_top = 216.0
margin_right = 620.0
margin_bottom = 293.0
text = "New Quiz Notification"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Send challenge completed notification" type="Button" parent="."]
margin_left = 99.0
margin_top = 339.0
margin_right = 621.0
margin_bottom = 407.0
text = "Send challenge completed notification"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Send challenge declined notification2" type="Button" parent="."]
margin_left = 102.0
margin_top = 443.0
margin_right = 623.0
margin_bottom = 512.0
text = "Send challenge declined notification"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Send challenge notification" type="Button" parent="."]
margin_left = 99.0
margin_top = 547.0
margin_right = 629.0
margin_bottom = 618.0
text = "Send Challenge Notification"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter for Challenge Notifications" type="Button" parent="."]
margin_left = 90.0
margin_top = 658.0
margin_right = 636.0
margin_bottom = 728.0
text = "Filter for Challenge Notifications"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Get Students of Class" type="Button" parent="."]
margin_left = 82.0
margin_top = 772.0
margin_right = 642.0
margin_bottom = 833.0
text = "Get Students of Class"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Get Classmate of User" type="Button" parent="."]
margin_left = 93.0
margin_top = 875.0
margin_right = 646.0
margin_bottom = 928.0
text = "Get Classmate of User"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Get Notifications for User" to="." method="_on_Get_Notifications_for_User_button_up"]
[connection signal="button_up" from="New Quiz Notification" to="." method="_on_New_Quiz_Notification_button_up"]
[connection signal="button_up" from="Send challenge completed notification" to="." method="_on_Send_challenge_completed_notification_button_up"]
[connection signal="button_up" from="Send challenge declined notification2" to="." method="_on_Send_challenge_declined_notification2_button_up"]
[connection signal="button_up" from="Send challenge notification" to="." method="_on_Send_challenge_notification_button_up"]
[connection signal="button_up" from="Filter for Challenge Notifications" to="." method="_on_Filter_for_Challenge_Notifications_button_up"]
[connection signal="button_up" from="Get Students of Class" to="." method="_on_Get_Students_of_Class_button_up"]
[connection signal="button_up" from="Get Classmate of User" to="." method="_on_Get_Classmate_of_User_button_up"]
